Jann 30/objects/GS1_Multipack__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Dsp__c</fullName>
        <formula>IF(ISNUMBER(Code__c),VALUE(Code__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multipack Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Multipack Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UnitType2__c</fullName>
        <formula>TEXT(UnitType__c) + &apos;U&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitType__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>GS1 Multipack</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>UnitType__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1_Active_Multipacks</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>UnitType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 - Active Multipacks</label>
    </listViews>
    <listViews>
        <fullName>X2_Inactive_Multipacks</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>UnitType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2 - Inactive Multipacks</label>
    </listViews>
    <nameField>
        <label>Multipack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS1 Multipacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>